--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <label for="email">Email:</label>
           <input
           id="email"
-          type="text"
+          type="email"
           name="email"
           required
           />
