Added Submit button

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           placeholder="Anything you'd like to let us know?"
           ></textarea>
         </div>
+        <button type="submit">Submit</button>
       </form>
     </main>
   </body>
